@@ -1,4 +1,5 @@
 current:
+  * add "raw" output option (without symbology prefix) to apps (req #2671863)
   * fix Code 39 min length and document min/max configs (bug #2787925)
   * fix zbar_image_free_data windows recursion loop (bug #2796277)
   * fix uninitialized decoder configs (bug #2800163)
